--- a/index.html
+++ b/index.html
@@ -1,103 +1,60 @@
-<!DOCTYPE html>\
-<html lang="en">\
-<head>\
-    <meta charset="UTF-8">\
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">\
-    <title>Rakan Alasiri - Chemical Engineer</title>\
-    <style>\
-        body \{\
-            font-family: Arial, sans-serif;\
-            margin: 0;\
-            padding: 0;\
-            background-color: #f4f4f4;\
-        \}\
-        header \{\
-            background-color: #333;\
-            color: #fff;\
-            padding: 10px 0;\
-            text-align: center;\
-        \}\
-        nav \{\
-            display: flex;\
-            justify-content: center;\
-            background-color: #444;\
-        \}\
-        nav a \{\
-            color: #fff;\
-            padding: 14px 20px;\
-            text-decoration: none;\
-            text-transform: uppercase;\
-        \}\
-        nav a:hover \{\
-            background-color: #555;\
-        \}\
-        .container \{\
-            padding: 20px;\
-        \}\
-        .section \{\
-            margin-bottom: 20px;\
-        \}\
-        footer \{\
-            background-color: #333;\
-            color: #fff;\
-            text-align: center;\
-            padding: 10px 0;\
-            position: fixed;\
-            bottom: 0;\
-            width: 100%;\
-        \}\
-    </style>\
-</head>\
-<body>\
-    <header>\
-        <h1>Rakan Alasiri</h1>\
-        <p>Chemical Engineer</p>\
-    </header>\
-    <nav>\
-        <a href="#about">About Me</a>\
-        <a href="#projects">Projects</a>\
-        <a href="#skills">Skills</a>\
-        <a href="#contact">Contact</a>\
-        <a href="#blog">Blog</a>\
-    </nav>\
-    <div class="container">\
-        <section id="about" class="section">\
-            <h2>About Me</h2>\
-            <p>I am passionate about project management, finance, fitness, and long-term investing.</p>\
-        </section>\
-        <section id="projects" class="section">\
-            <h2>Projects</h2>\
-            <p>Here you can list your projects. For example:</p>\
-            <ul>\
-                <li>Project 1 - Description of project 1</li>\
-                <li>Project 2 - Description of project 2</li>\
-                <li>Project 3 - Description of project 3</li>\
-            </ul>\
-        </section>\
-        <section id="skills" class="section">\
-            <h2>Skills</h2>\
-            <ul>\
-                <li>Chemical Engineering</li>\
-                <li>Project Management</li>\
-                <li>Financial Analysis</li>\
-                <li>Fitness Training</li>\
-                <li>Long-term Investing</li>\
-            </ul>\
-        </section>\
-        <section id="contact" class="section">\
-            <h2>Contact</h2>\
-            <p>You can contact me at:</p>\
-            <p>Email: your-email@example.com</p>\
-            <p>Phone: +1234567890</p>\
-        </section>\
-        <section id="blog" class="section">\
-            <h2>Blog</h2>\
-            <p>Welcome to my blog! Here, I share my thoughts on various topics related to my interests.</p>\
-        </section>\
-    </div>\
-    <footer>\
-        <p>&copy; 2024 Rakan Alasiri. All rights reserved.</p>\
-    </footer>\
-</body>\
-</html>\
-}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Rakan Alasiri - Chemical Engineer</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <h1>Rakan Alasiri</h1>
+        <p>Chemical Engineer</p>
+    </header>
+    <nav>
+        <a href="#about">About Me</a>
+        <a href="#projects">Projects</a>
+        <a href="#skills">Skills</a>
+        <a href="#contact">Contact</a>
+        <a href="#blog">Blog</a>
+    </nav>
+    <div class="container">
+        <section id="about" class="section">
+            <h2>About Me</h2>
+            <p>I am passionate about project management, finance, fitness, and long-term investing.</p>
+        </section>
+        <section id="projects" class="section">
+            <h2>Projects</h2>
+            <p>Here you can list your projects. For example:</p>
+            <ul>
+                <li>Project 1 - Description of project 1</li>
+                <li>Project 2 - Description of project 2</li>
+                <li>Project 3 - Description of project 3</li>
+            </ul>
+        </section>
+        <section id="skills" class="section">
+            <h2>Skills</h2>
+            <ul>
+                <li>Chemical Engineering</li>
+                <li>Project Management</li>
+                <li>Financial Analysis</li>
+                <li>Fitness Training</li>
+                <li>Long-term Investing</li>
+            </ul>
+        </section>
+        <section id="contact" class="section">
+            <h2>Contact</h2>
+            <p>You can contact me at:</p>
+            <p>Email: your-email@example.com</p>
+            <p>Phone: +1234567890</p>
+        </section>
+        <section id="blog" class="section">
+            <h2>Blog</h2>
+            <p>Welcome to my blog! Here, I share my thoughts on various topics related to my interests.</p>
+        </section>
+    </div>
+    <footer>
+        <p>&copy; 2024 Rakan Alasiri. All rights reserved.</p>
+    </footer>
+</body>
+</html>
