--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <a href="#projects">Projects</a>
         <a href="#skills">Skills</a>
         <a href="#contact">Contact</a>
-        <a href="https://https://rakanalasiri.blogspot.com" target="_blank">Blog</a>
+        <a href="https://rakanalasiri.blogspot.com" target="_blank">Blog</a>
     </nav>
     <div class="container">
         <section id="about" class="section">
