--- a/index.html
+++ b/index.html
@@ -3,100 +3,83 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rakan Alasiri - A resident of 800S </title>
+    <title>Rakan Alasiri - Chemical Engineer</title>
     <style>
         body {
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-image: url('image.png'); /* Use the correct file name for your image */
-            background-size: cover;
-            background-position: center;
-            color: #fff; /* Set text color to white for better visibility */
-            text-align: center; /* Center align all text */
+            background-color: #f4f4f4;
         }
-        header {
-            background-color: rgba(51, 51, 51, 0.8); /* Semi-transparent background */
-            padding: 10px 0;
+        header, nav, section, footer {
+            max-width: 960px;
+            margin: auto;
+            padding: 20px;
+            background-color: white;
+            border: 1px solid #ddd;
         }
-        nav {
-            display: flex;
-            justify-content: center;
-            background-color: rgba(68, 68, 68, 0.8); /* Semi-transparent background */
-            position: sticky;
-            top: 0;
-            z-index: 1000;
+        header h1 {
+            color: #333;
         }
-        nav a {
-            color: #fff;
-            padding: 14px 20px;
+        nav ul {
+            list-style-type: none;
+            padding: 0;
+        }
+        nav ul li {
+            display: inline;
+            margin-right: 10px;
+        }
+        a {
             text-decoration: none;
-            text-transform: uppercase;
+            color: #0275d8;
         }
-        nav a:hover {
-            background-color: rgba(85, 85, 85, 0.8);
-        }
-        .container {
-            padding: 20px;
-        }
-        .section {
-            margin-bottom: 20px;
-            background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
-            padding: 20px;
-            border-radius: 10px;
+        a:hover {
+            text-decoration: underline;
         }
         footer {
-            background-color: rgba(51, 51, 51, 0.8);
-            padding: 10px 0;
-            position: fixed;
-            bottom: 0;
-            width: 100%;
+            text-align: center;
+            font-size: 0.8em;
+            color: #666;
         }
     </style>
 </head>
 <body>
     <header>
         <h1>Rakan Alasiri</h1>
-        <p>Chemical Engineer</p>
+        <p>Chemical Engineer | AI Enthusiast</p>
     </header>
     <nav>
-        <a href="#about">About Me</a>
-        <a href="#projects">Projects</a>
-        <a href="#skills">Skills</a>
-        <a href="#contact">Contact</a>
-        <a href="https://rakanalasiri.blogspot.com" target="_blank">Blog</a>
+        <ul>
+            <li><a href="#about">About Me</a></li>
+            <li><a href="#achievements">Achievements</a></li>
+            <li><a href="#certifications">Certifications</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
     </nav>
-    <div class="container">
-        <section id="about" class="section">
-            <h2>About Me</h2>
-            <p>I am passionate about project management, finance, fitness, and long-term investing.</p>
-        </section>
-        <section id="projects" class="section">
-            <h2>Projects</h2>
-            <p>Here you can list your projects. For example:</p>
-            <ul>
-                <li>Project 1 - Description of project 1</li>
-                <li>Project 2 - Description of project 2</li>
-                <li>Project 3 - Description of project 3</li>
-            </ul>
-        </section>
-        <section id="skills" class="section">
-            <h2>Skills</h2>
-            <ul>
-                <li>Chemical Engineering</li>
-                <li>Project Management</li>
-                <li>Financial Analysis</li>
-                <li>Fitness Training</li>
-                <li>Long-term Investing</li>
-            </ul>
-        </section>
-        <section id="contact" class="section">
-            <h2>Contact</h2>
-            <p>You can contact me at:</p>
-            <p>Email: your-email@example.com</p>
-            <p>Phone: +1234567890</p>
-        </section>
-    </div>
+    <section id="about">
+        <h2>About Me</h2>
+        <p>Dedicated and detail-oriented Chemical Engineering graduate with a passion for technology and AI. Graduated from the Illinois Institute of Technology with a strong academic record and practical experience in various projects.</p>
+    </section>
+    <section id="achievements">
+        <h2>Achievements</h2>
+        <ul>
+            <li>Dean's List - Six consecutive semesters</li>
+            <li>Faculty Choice Award 2024, Chemical Engineering Department</li>
+            <!-- More achievements can be added here -->
+        </ul>
+    </section>
+    <section id="certifications">
+        <h2>Professional Certifications</h2>
+        <ul>
+            <li>Certified Six Sigma Green Belt</li>
+            <!-- More certifications can be added here -->
+        </ul>
+    </section>
+    <section id="contact">
+        <h2>Contact</h2>
+        <p>Email: <a href="mailto:rakan@example.com">rakan@example.com</a></p>
+        <!-- Additional contact information can be added here -->
+    </section>
     <footer>
         <p>&copy; 2024 Rakan Alasiri. All rights reserved.</p>
     </footer>
