--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
     <section id="achievements">
         <h2>Achievements</h2>
         <ul>
+            <li><a href="https://postimg.cc/2176TG6f" target="_blank">Faculty Choice Award 2024, Chemical Engineering Department</a></li>
             <li>Dean's List - Six consecutive semesters</li>
-            <li>Faculty Choice Award 2024, Chemical Engineering Department</li>
             <!-- More achievements can be added here -->
         </ul>
     </section>
@@ -72,7 +72,7 @@
         <h2>Professional Certifications</h2>
         <ul>
             <li>Certified Six Sigma Green Belt</li>
-            <!-- More certifications can be added here -->
+            <!-- Hyperlinks for more certifications can be added here -->
         </ul>
     </section>
     <section id="contact">
