--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <section id="achievements">
         <h2>Achievements</h2>
         <ul>
-            <li><a href="https://postimg.cc/2176TG6f" target="_blank">Faculty Choice Award 2024, Chemical Engineering Department</a></li>
+            <li><a href="https://i.postimg.cc/L8r190Fh/IMG-0388.avif" target="_blank">Faculty Choice Award 2024, Chemical Engineering Department</a></li>
             <li>Dean's List - Six consecutive semesters</li>
             <!-- More achievements can be added here -->
         </ul>
@@ -77,7 +77,7 @@
     </section>
     <section id="contact">
         <h2>Contact</h2>
-        <p>Email: <a href="mailto:rakan@example.com">rakan@example.com</a></p>
+        <p>Email: <a href="mailto:rakan@example.com">ralasiri@example.com</a></p>
         <!-- Additional contact information can be added here -->
     </section>
     <footer>
