--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
     <section id="achievements">
         <h2>Achievements</h2>
         <ul>
-            <li><a href="https://i.postimg.cc/L8r190Fh/IMG-0388.avif" target="_blank">Faculty Choice Award 2024, Chemical Engineering Department</a></li>
-            <li>Dean's List - Six consecutive semesters</li>
+            <li><a href="https://postimg.cc/2176TG6f" target="_blank">Faculty Choice Award 2024, Chemical Engineering Department</a></li>
+            <li><a href="https://i.postimg.cc/NGZqxWTd/Transcript-up-to-the-end-of-Spring-2024.png" target="_blank">Dean's List - Six consecutive semesters (View Transcript)</a></li>
             <!-- More achievements can be added here -->
         </ul>
     </section>
@@ -77,7 +77,8 @@
     </section>
     <section id="contact">
         <h2>Contact</h2>
-        <p>Email: <a href="mailto:rakan@example.com">ralasiri@example.com</a></p>
+        <p>Email: <a href="mailto:rakanfalasiri@gmail.com">rakanfalasiri@gmail.com</a></p>
+        <p>Academic Email: <a href="mailto:ralasiri@hawk.iit.edu">ralasiri@hawk.iit.edu</a></p>
         <!-- Additional contact information can be added here -->
     </section>
     <footer>
