--- a/index.html
+++ b/index.html
@@ -64,23 +64,19 @@
         <h2>Achievements</h2>
         <ul>
             <li><a href="https://postimg.cc/2176TG6f" target="_blank">Faculty Choice Award 2024, Chemical Engineering Department</a></li>
-            <li><a href="https://postimg.cc/5j5R4Ksz" target="_blank">Dean's List - Five times, non-consecutive (View Transcript)</a></li>
-            <!-- More achievements can be added here -->
+            <li><a href="https://postimg.cc/5j5R4Ksz" target="_blank">Dean's List - Five times (View Transcript)</a></li>
         </ul>
     </section>
     <section id="certifications">
         <h2>Professional Certifications</h2>
         <ul>
-            <li>Certified Six Sigma Green Belt</li>
-            <li><a href="https://coursera.org/verify/G5P7P53VC9YG" target="_blank">Coursera - Preparing Data for Analysis with Microsoft Excel</a></li>
-            <!-- Hyperlinks for more certifications can be added here -->
+            <li><a href="https://coursera.org/verify/G5P7P53VC9YG" target="_blank">Coursera: Preparing Data for Analysis with Microsoft Excel - Mastered essential data analysis skills using Excel, focusing on practical applications in data preparation and manipulation.</a></li>
         </ul>
     </section>
     <section id="contact">
         <h2>Contact</h2>
         <p>Email: <a href="mailto:rakanfalasiri@gmail.com">rakanfalasiri@gmail.com</a></p>
         <p>Academic Email: <a href="mailto:ralasiri@hawk.iit.edu">ralasiri@hawk.iit.edu</a></p>
-        <!-- Additional contact information can be added here -->
     </section>
     <footer>
         <p>&copy; 2024 Rakan Alasiri. All rights reserved.</p>
