--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
         <h2>Professional Certifications</h2>
         <ul>
             <li><a href="https://coursera.org/verify/G5P7P53VC9YG" target="_blank">Coursera: Preparing Data for Analysis with Microsoft Excel - Mastered essential data analysis skills using Excel, focusing on practical applications in data preparation and manipulation.</a></li>
+            <li><a href="https://www.coursera.org/account/accomplishments/verify/9LCPLT7JHP65" target="_blank">Coursera: Foundations of Project Management - Acquired skills in project management across a variety of industries, understanding the lifecycle and methodologies essential to project success.</a></li>
         </ul>
     </section>
     <section id="contact">
