--- a/index.html
+++ b/index.html
@@ -41,6 +41,12 @@
             font-size: 0.8em;
             color: #666;
         }
+        #about img {
+            width: 100%;
+            max-width: 400px;
+            display: block;
+            margin: 20px auto;
+        }
     </style>
 </head>
 <body>
@@ -58,6 +64,7 @@
     </nav>
     <section id="about">
         <h2>About Me</h2>
+        <img src="https://i.postimg.cc/HkXFv8WN/IMG-2994.avif" alt="Rakan Alasiri holding honorary certificates">
         <p>Dedicated and detail-oriented Chemical Engineering graduate with a passion for technology and AI. Graduated from the Illinois Institute of Technology with a strong academic record and practical experience in various projects.</p>
     </section>
     <section id="achievements">
