--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rakan Alasiri - Chemical Engineer</title>
+    <title>Rakan Alasiri - Chemical Engineer | AI Enthusiast</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -17,9 +17,11 @@
             padding: 20px;
             background-color: white;
             border: 1px solid #ddd;
+            text-align: center;
         }
-        header h1 {
-            color: #333;
+        header h1, header p {
+            margin: 0;
+            padding: 0;
         }
         nav ul {
             list-style-type: none;
@@ -75,16 +77,18 @@
         </ul>
     </section>
     <section id="certifications">
-        <h2>Professional Certifications</h2>
+        <h2>Certifications</h2>
         <ul>
             <li><a href="https://coursera.org/verify/G5P7P53VC9YG" target="_blank">Coursera: Preparing Data for Analysis with Microsoft Excel - Mastered essential data analysis skills using Excel, focusing on practical applications in data preparation and manipulation.</a></li>
             <li><a href="https://www.coursera.org/account/accomplishments/verify/9LCPLT7JHP65" target="_blank">Coursera: Foundations of Project Management - Acquired skills in project management across a variety of industries, understanding the lifecycle and methodologies essential to project success.</a></li>
+            <li><a href="https://matlabacademy.mathworks.com/progress/share/certificate.html?id=4564c738-399a-4168-824f-3af9e25f58aa" target="_blank">MathWorks: MATLAB Onramp - Successfully completed 100% of the self-paced training course in MATLAB.</a></li>
         </ul>
     </section>
     <section id="contact">
         <h2>Contact</h2>
         <p>Email: <a href="mailto:rakanfalasiri@gmail.com">rakanfalasiri@gmail.com</a></p>
         <p>Academic Email: <a href="mailto:ralasiri@hawk.iit.edu">ralasiri@hawk.iit.edu</a></p>
+        <p>LinkedIn: <a href="https://www.linkedin.com/in/rakan-alasiri-8917131bb" target="_blank">Rakan Alasiri on LinkedIn</a></p>
     </section>
     <footer>
         <p>&copy; 2024 Rakan Alasiri. All rights reserved.</p>
