--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <h2>Achievements</h2>
         <ul>
             <li><a href="https://postimg.cc/2176TG6f" target="_blank">Faculty Choice Award 2024, Chemical Engineering Department</a></li>
-            <li><a href="https://postimg.cc/5j5R4Ksz" target="_blank">Dean's List - Five times (View Transcript)</a></li>
+            <li><a href="https://postimg.cc/5j5R4Ksz" target="_blank">Dean's List for four consecutive academic year (View Transcript)</a></li>
         </ul>
     </section>
     <section id="certifications">
